fix: remove gap in partners__grid

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1194,7 +1194,7 @@
   .partners__grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
+    gap: 0;
   }
 
   .partner__logo {
